--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
-clap = "4.3.0"
+clap = { version = "4.3.0", features = ["derive"] }
 handlebars = "4.3.7"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_derive = "1.0.163"
